Add missing Prometheus metrics for validator BFT stats