@@ -65,28 +65,29 @@
 package com.radixdlt.api.system.prometheus;
 
 import static com.radixdlt.api.system.prometheus.PrometheusService.JmxMetric.jmxMetric;
+import static com.radixdlt.atom.SubstateTypeId.VALIDATOR_BFT_DATA;
 import static org.radix.Radix.SYSTEM_VERSION_KEY;
 import static org.radix.Radix.VERSION_STRING_KEY;
 
 import com.google.inject.Inject;
 import com.radixdlt.api.system.health.HealthInfoService;
+import com.radixdlt.application.system.state.ValidatorBFTData;
 import com.radixdlt.consensus.bft.BFTNode;
 import com.radixdlt.consensus.bft.BFTValidatorSet;
 import com.radixdlt.consensus.bft.Self;
+import com.radixdlt.constraintmachine.SystemMapKey;
 import com.radixdlt.counters.SystemCounters;
 import com.radixdlt.counters.SystemCounters.CounterType;
+import com.radixdlt.engine.RadixEngine;
 import com.radixdlt.identifiers.REAddr;
 import com.radixdlt.network.p2p.PeersView;
 import com.radixdlt.networks.Addressing;
 import com.radixdlt.properties.RuntimeProperties;
+import com.radixdlt.statecomputer.LedgerAndBFTProof;
 import com.radixdlt.systeminfo.InMemorySystemInfo;
 import java.io.IOException;
 import java.lang.management.ManagementFactory;
-import java.util.AbstractCollection;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
+import java.util.*;
 import javax.management.InstanceNotFoundException;
 import javax.management.MBeanServerConnection;
 import javax.management.MalformedObjectNameException;
@@ -100,7 +101,7 @@ import org.radix.Radix;
 public class PrometheusService {
   private static final Logger log = LogManager.getLogger();
 
-  private static final List<CounterType> EXPORT_LIST = Arrays.asList(CounterType.values());
+  private static final List<CounterType> EXPORT_LIST = List.of(CounterType.values());
 
   public static final String USAGE = "Usage";
   private static final List<JmxMetric> JMX_METRICS =
@@ -130,6 +131,7 @@ public class PrometheusService {
   private final BFTNode self;
   private final Map<String, Boolean> endpointStatuses;
   private final PeersView peersView;
+  private final RadixEngine<LedgerAndBFTProof> radixEngine;
 
   @Inject
   public PrometheusService(
@@ -138,8 +140,10 @@ public class PrometheusService {
       PeersView peersView,
       HealthInfoService healthInfoService,
       InMemorySystemInfo inMemorySystemInfo,
+      RadixEngine<LedgerAndBFTProof> radixEngine,
       @Self BFTNode self,
       Addressing addressing) {
+    this.radixEngine = radixEngine;
     boolean enableTransactions = properties.get("api.transactions.enable", false);
     this.endpointStatuses = Map.of("transactions", enableTransactions);
     this.systemCounters = systemCounters;
@@ -243,6 +247,27 @@ public class PrometheusService {
 
   private void exportCounters(StringBuilder builder) {
     EXPORT_LIST.forEach(counterType -> generateCounterEntry(counterType, builder));
+
+    getProposalStats()
+        .ifPresent(
+            uptime -> {
+              appendCounter(
+                  builder,
+                  COUNTER_PREFIX + "radix_engine_cur_epoch_completed_proposals",
+                  uptime.proposalsCompleted());
+              appendCounter(
+                  builder,
+                  COUNTER_PREFIX + "radix_engine_cur_epoch_missed_proposals",
+                  uptime.proposalsMissed());
+            });
+  }
+
+  private Optional<ValidatorBFTData> getProposalStats() {
+    var validatorBFTKey =
+        SystemMapKey.ofSystem(VALIDATOR_BFT_DATA.id(), self.getKey().getCompressedBytes());
+
+    return radixEngine.read(
+        reader -> reader.get(validatorBFTKey).map(ValidatorBFTData.class::cast));
   }
 
   private void generateCounterEntry(CounterType counterType, StringBuilder builder) {
